[project]
name = "imgcanvas"
description = "ComfyUI_imgcanvas At present, I have not used the useful comfyui custom node about layer mixing, and I have written a comfyui runtime automatic pop-up window for layer editing node"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/GoingAI1998/Comfyui_imgcanvas"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui_imgcanvas"
Icon = ""
